--- a/src/components/articleCard/articleCard.css
+++ b/src/components/articleCard/articleCard.css
@@ -7,6 +7,15 @@
 	display: flex;
 	max-width: 30rem;
 	text-decoration: none;
+	transition: transform ease 1s;
+	transform: translateY(50px);
+	opacity: 0;
+}
+
+/* this class is used to animate the card container when it appears on the screen */
+.fadeAndMoveFromBelow {
+	transform: translateY(0);
+	opacity: 1;
 }
 
 /* the image on the left of the card */
