change article title height to make it look nice on phones

--- a/src/pages/article/article.css
+++ b/src/pages/article/article.css
@@ -48,3 +48,14 @@
 	transform: translateY(0);
 	opacity: 1;
 }
+
+@media screen and (max-width: 600px) {
+	/* the title, inside the articleContainer */
+	.articleTitle {
+		font-size: 2rem;
+	}
+	/* the container that displays the main data of the article */
+	.articleTitleSection {
+		height: 5rem;
+	}
+}
