add first article, add scrollToTop and implements the case in which there is no articles

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 /* Container of the whole app */
 #appContainer {
-	display: grid;
-	place-items: center;
+	display: flex;
 	margin: 0 auto;
-	width: 70%;
+	width: 80%;
 }
 
 @media screen and (max-width: 600px) {
