--- a/src/components/homeBox/homeBox.css
+++ b/src/components/homeBox/homeBox.css
@@ -2,11 +2,11 @@
 .boxContainer {
 	position: relative;
 	width: 100%;
-	height: 35vw;
+	height: 25vw;
 	max-height: 500px;
-	margin: 5rem 0;
-	transition: transform ease 1s;
-	transform: translateY(200px);
+	margin: 2rem 0;
+	transition: all ease 1s;
+	transform: translateY(100px);
 	opacity: 0;
 }
 
