add of contents table on first article, correct bug on the width of the home page and install react-scroll (for tables of contents)

--- a/src/data/articles/articleStyle.css
+++ b/src/data/articles/articleStyle.css
@@ -30,3 +30,12 @@
 	font-size: 1rem;
 	font-weight: normal;
 }
+
+.article .contents {
+	display: grid;
+	place-items: center;
+}
+
+.article .contents div > * {
+	cursor: pointer;
+}
