--- a/src/pages/article/article.css
+++ b/src/pages/article/article.css
@@ -13,6 +13,7 @@
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 3vw;
+	text-align: center;
 }
 
 /* the title, inside the articleContainer */
