--- a/src/data/articles/articleStyle.css
+++ b/src/data/articles/articleStyle.css
@@ -32,10 +32,42 @@
 }
 
 .article .contents {
+	position: relative;
+	width: 100%;
 	display: grid;
 	place-items: center;
+	padding: 2rem;
+}
+
+.article .contents h1 {
+	color: #ffeda4;
+}
+
+.article .contents img {
+	position: absolute;
+	left: 0;
+	top: 0;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1;
+	filter: brightness(40%);
+}
+
+.article .contents div {
+	margin-top: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 0.5rem;
+	background: rgba(0, 0, 0, .7);
+	padding: 1rem;
+	text-align: center;
 }
 
 .article .contents div > * {
 	cursor: pointer;
+	color: #fff;
+	padding: 0.2rem 0;
 }
