--- a/src/components/articleCard/articleCard.css
+++ b/src/components/articleCard/articleCard.css
@@ -7,7 +7,7 @@
 	display: flex;
 	max-width: 30rem;
 	text-decoration: none;
-	transition: transform ease 1s;
+	transition: all ease 1s;
 	transform: translateY(50px);
 	opacity: 0;
 }
