+ article clubNantes, clubBrest, coupe2020

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 /* container of the whole header */
 #headerContainer {
-	position: fixed;
+	position: absolute;
 	width: calc(80% - 60px);
 	display: flex;
 	flex-direction: row;
