--- a/src/data/articles/articleStyle.css
+++ b/src/data/articles/articleStyle.css
@@ -17,6 +17,12 @@
 	margin: 1rem 10%;
 }
 
+.article iframe {
+	width: 80%;
+	height: 30vw;
+	margin: 1rem 10%;
+}
+
 .article a {
 	color: #02b8df;
 	text-decoration: none;
@@ -91,4 +97,38 @@
 	align-items: center;
 	justify-content: space-between;
 	flex-direction: row;
+}
+
+.article .avatar {
+	margin: 5rem 0;
+	justify-content: center;
+}
+
+.article .avatar div>img{
+	vertical-align: middle;
+	width: 10rem;
+	height: 10rem;
+	border-radius: 50%;
+	object-fit: cover;
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.article .avatar div{
+	text-align:center;
+	width: 40%
+}
+
+.article .avatar p{
+	text-indent: 0;
+	margin: 0 0 0.3rem 0 ;
+}
+
+@media screen and (max-width: 600px) {
+	.article .avatar {
+		display: block;
+	}
+	.article .avatar div{
+		width: 100%
+	}
 }
