--- a/src/pages/article/article.css
+++ b/src/pages/article/article.css
@@ -1,7 +1,8 @@
 /* the page that displays a single article */
 .articleContainer {
-	margin: 5rem 0;
 	width: 100%;
+	max-width: 70rem;
+	margin: 5rem auto;
 }
 
 /* the container that displays the main data of the article */
